Removed hidden character unicode and fixed nav alignment

--- a/seller-frontend/styles/global.css
+++ b/seller-frontend/styles/global.css
@@ -112,6 +112,7 @@ main {
 
 .link-text {
     transition: all 400ms ease-in-out;
+    width: 200px;
 }
 
 .logo-container {
